--- a/taskpage.html
+++ b/taskpage.html
@@ -14,12 +14,20 @@
 	<h3>Add Your Task</h3>
 	<p class="p">What do you want to get done today?</p>
 	
-	<div class="container">
+	<!-- <div class="container">
 		<input type="text" placeholder="enter your task" id="userinput" class="userinput">
 		<button id="add" class="add rounded-4">Add</button>
 		<button id="del" class="del">Remove</button>
+	</div> -->
+
+	<div class="container justify-content-center d-flex">
+		<input type="text" placeholder="enter your task" id="userinput" class="userinput">
+		<button id="add" type="button" class="btn btn-primary col-md-1 fw-bold border">Add</button>
+		<button id="del" class="del">Remove</button>
 	</div>
 
+	<br>
+	
 	<div id="mainClass">
 		<!-- <div id="main" class="main container">
 			<div class="maindata input-group mb-3 justify-content-center align-items-center d-flex">
@@ -32,6 +40,16 @@
 				<button type="button" class="btn btn-danger rounded" onclick="removeTask()" id="deleteButton">Delete</button>
 			</div>
 		</div> -->
+
+		<div id="main" class="container">
+			<div class="alert alert-success alert-dismissible" role="alert">
+				<div class="form-checkbox">
+			   		<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+					<label class="form-check-label col-md-1" for="flexCheckDefault">Reminder</label>
+					<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+			  	</div>
+			</div>
+		</div>
 	</div>
 	
 	<script src="./taskFunction.js"></script>
