--- a/taskpage.html
+++ b/taskpage.html
@@ -41,7 +41,7 @@
 			</div>
 		</div> -->
 
-		<div id="main" class="container">
+		<!-- <div id="main" class="container">
 			<div class="alert alert-success alert-dismissible" role="alert">
 				<div class="form-checkbox">
 			   		<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
@@ -49,7 +49,7 @@
 					<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 			  	</div>
 			</div>
-		</div>
+		</div> -->
 	</div>
 	
 	<script src="./taskFunction.js"></script>
